lots of changes

--- a/gallery.html
+++ b/gallery.html
@@ -1,121 +1,8 @@
 <html>
 <head>
-<link rel="icon" type="image/png" href="icon.png"/>
-<style>
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: #661a00;
-}
+<link rel="icon" type="image/png" href="./images/icon.png"/>
+<link rel="stylesheet" type="text/css" href="./styles/gallery.css">
 
-li {
-    float: left;
-}
-
-li a, .dropbtn {
-    display: inline-block;
-    color: white;
-    text-align: center;
-    padding: 20px 20px;
-    text-decoration: none;
-	font-size:30;
-	
-}
-
-li a:hover, .dropdown:hover .dropbtn {
-    background-color: #802000;
-}
-
-li.dropdown {
-    display: inline-block;
-}
-
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 20px 20px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-}
-
-.dropdown-content a {
-    color: black;
-    padding: 20px 20px;
-    text-decoration: none;
-    display: block;
-    text-align: left;
-}
-
-.dropdown-content a:hover {background-color: #f1f1f1}
-
-.dropdown:hover .dropdown-content {
-    display: block;
-}
-
-.active {
-    background-color: #ff5c33;
-}
-
-
-
-div.logo {
- margin: 5px;
- width: 100%;
- position:fixed;
- bottom:50px;
- left:1600px;
-  z-index: 2;
-	}
-
-
-div.gallery {
-    margin: 1px;
-    border: 1px solid #ccc;
-    width: 530px;
-	height:530px;
-	float:left
-
-	}
-
-div.gallery:hover {
-    border: 1px solid #777;
-}
-
-div.gallery img {
-    width: 100%;
-    height: 100%;
-	overflow:hidden;
-margin: auto;
-}
-
-div.desc {
-    padding: 1px;
-    text-align: center;
-	font-size:20;
-	font-family: Arial;
-	font-weight: bold;
-    position:relative;
-	bottom:30px;
-	color:brown;
-
-}
-p.z {
-text-align: center;
-font-size: 50;
-position:static;
-background-color:#ffb366;
-color:brown;
-font-weight:bold;
-}
-body {
-   background-image: url("tapet.jpg");
-   background-color: #cccccc;
-   width:100%;
-}
-</style>
 </head>
 <body>
 
@@ -136,20 +23,20 @@ body {
 
 
 
-<div class="logo"> <img src="logo.png">
+<div class="logo"> <img src="./images/logo.png">
 </div>
 <p class="z"> Gallery </p>
 <div class="gallery" >
   <a target="_self" href="1.jpg">
-    <img src="1.jpg">
+    <img src="./images/1.jpg">
   </a>
   <div class="desc">Blox</div>
 </div>
 
 
 <div  class="gallery" >
-  <a target="_self" href="2.jpg">
-    <img src="2.jpg">
+  <a target="_self" href="./images/2.jpg">
+    <img src="./images/2.jpg">
   </a>
   <div class="desc">Macho</div>
 </div>
@@ -159,49 +46,49 @@ body {
  
  
 <div class="gallery">
-  <a target="_self" href="3.jpg">
-    <img src="3.jpg">
+  <a target="_self" href="./images/3.jpg">
+    <img src="./images/3.jpg">
   </a>
   <div class="desc">Casper </div>
 </div>
 
 
 <div class="gallery">
-  <a target="_self" href="4.jpg">
-    <img src="4.jpg">
+  <a target="_self" href="./images/4.jpg">
+    <img src="./images/4.jpg">
   </a>
   <div class="desc">Oreo</div>
 </div>
 
 <div class="gallery">
-  <a target="_self" href="5.jpg">
-    <img src="5.jpg">
+  <a target="_self" href="./images/5.jpg">
+    <img src="./images/5.jpg">
   </a>
   <div class="desc">Roger</div>
 </div>
 <div class="gallery">
-  <a target="_self" href="6.jpg">
-    <img src="6.jpg">
+  <a target="_self" href="./images/6.jpg">
+    <img src="./images/6.jpg">
   </a>
   <div class="desc">James</div>
 </div>
 <div class="gallery">
-  <a target="_self" href="7.jpg">
-    <img src="7.jpg">
+  <a target="_self" href="./images/7.jpg">
+    <img src="./images/7.jpg">
   </a>
   <div class="desc">Spike</div>
 </div>
 <div class="gallery">
-  <a target="_self" href="8.jpg">
-    <img src="8.jpg">
+  <a target="_self" href="./images/8.jpg">
+    <img src="./images/8.jpg">
   </a>
   <div class="desc">Sam</div>
 </div>
 <div class="gallery">
-  <a target="_self" href="9.jpg">
-    <img src="9.jpg">
+  <a target="_self" href="./images/9.jpg">
+    <img src="./images/9.jpg">
   </a>
-  <div class="desc">Boiko</div>
+  <div class="desc">Rex</div>
 </div>
 </body>
 </html>
