--- a/map.html
+++ b/map.html
@@ -1,134 +1,8 @@
 <html>
 <head>
-<link rel="icon" type="image/png" href="icon.png"/>
-<style>
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: #661a00;
-}
+<link rel="icon" type="image/png" href="./images/icon.png"/>
+<link rel="stylesheet" type="text/css" href="./styles/map.css">
 
-li {
-    float: left;
-}
-
-li a, .dropbtn {
-    display: inline-block;
-    color: white;
-    text-align: center;
-    padding: 20px 20px;
-    text-decoration: none;
-	font-size:30;
-	
-}
-
-li a:hover, .dropdown:hover .dropbtn {
-    background-color: #802000;
-}
-
-li.dropdown {
-    display: inline-block;
-}
-
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 20px 20px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-}
-
-.dropdown-content a {
-    color: black;
-    padding: 20px 20px;
-    text-decoration: none;
-    display: block;
-    text-align: left;
-}
-
-.dropdown-content a:hover {background-color: #f1f1f1}
-
-.dropdown:hover .dropdown-content {
-    display: block;
-}
-
-.active {
-    background-color: #ff5c33;
-}
-
-div.logo {
- margin: 5px;
- width: 100%;
- position:fixed;
- bottom:50px;
- left:1600px;
-  z-index: 2;
-	}
-	p.z {
-text-align: center;
-font-size: 50;
-position:static;
-background-color:#ffb366;
-color:brown;
-font-weight:bold;
-}
-div.map {
-margin-left: 450px;
-
-}
-div.map img{
-width: 1000px;
-}
-div.m p {
-font-size: 30;
-background-color:#ffb366;
-font-family: Arial;
-border: 1px solid;
-overflow:hidden;
-text-align:justify;
-position:static;
-
-}
-
-
-h1 {
-font-size:50;
-font-family: Arial
-overflow:hidden;
-text-align:center;
-position:static;
-color:brown;
-border-top:5px solid;
-text-decoration:underline;
-}
-
-div.pet{
-overflow:hidden;
-width:30%;
-height:400px;
-border: 1px #330d00 solid;
-float:left;
-margin-left:50px;
-}
-
-div.pet img{
-width:100%;
-height:100%;
-overflow:hidden;
-margin: auto;
-
-}
-
-body {
-   background-image: url("tapet.jpg");
-   background-color: #cccccc;
-   width:100%;
-}
-
-</style>
 </head>
 <body>
 
@@ -152,12 +26,12 @@ body {
 
 
 
-<div class="logo"> <img src="logo.png"> </div>
+<div class="logo"> <img src="./images/logo.png"> </div>
 <p class="z">Happy Paws Shops Near You: </p>
 
 
 <div class="map"> 
-<img src="mapbg.png" usemap="#bgmap">
+<img src="./images/mapbg.png" usemap="#bgmap">
 </div>
 <map name="bgmap">
 <area shape="circle" coords="400,160,30" href="#pleven" >
@@ -176,9 +50,9 @@ PetShop office Pleven Druzhba<br>
 Opens at 9:00 AM </p></div><br>
 
 
-<div class="pet"><a target="_self" href="pleven.jpg"><img src="pleven.jpg"> </a></div>
-<div class="pet"><a target="_self" href="pet1.jpg"><img src="pet1.jpg"></a></div>
-<div class="pet"><a target="_self" href="pet6.jpg"><img src="pet6.jpg"></a></div>
+<div class="pet"><a target="_self" href="./images/pleven.jpg"><img src="./images/pleven.jpg"> </a></div>
+<div class="pet"><a target="_self" href="./images/pet1.jpg"><img src="./images/pet1.jpg"></a></div>
+<div class="pet"><a target="_self" href="./images/pet6.jpg"><img src="./images/pet6.jpg"></a></div>
 
 
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
@@ -194,9 +68,9 @@ PetShop office Varna Chataldja<br>
 Район Приморски, ул. Княз Николаевич №34, зад пазара за цветя · 052 609 214<br>
 Opens at 9:00 AM</p></div><br>
 
-<div class="pet"><a target="_self" href="varna.png"><img src="varna.png"></a></div>
-<div class="pet"><a target="_self" href="pet2.jpg"><img src="pet2.jpg"></a></div> 
-<div class="pet"><a target="_self" href="pet8.jpg"><img src="pet8.jpg"></a></div> 
+<div class="pet"><a target="_self" href="./images/varna.png"><img src="./images/varna.png"></a></div>
+<div class="pet"><a target="_self" href="./images/pet2.jpg"><img src="./images/pet2.jpg"></a></div> 
+<div class="pet"><a target="_self" href="./images/pet8.jpg"><img src="./images/pet8.jpg"></a></div> 
 
 
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
@@ -212,9 +86,9 @@ j.k. sunrise 186 · 088 281 8025 <br>
 Opens at 9:00 AM </p></div><br>
 
 
-<div class="pet"><a target="_self" href="burgas.jpg"><img src="burgas.jpg"> </a></div>
-<div class="pet"><a target="_self" href="pet3.jpg"><img src="pet3.jpg"></a> </div>
-<div class="pet"><a target="_self" href="pet7.jpg"><img src="pet7.jpg"></a></div>
+<div class="pet"><a target="_self" href="./images/burgas.jpg"><img src="./images/burgas.jpg"> </a></div>
+<div class="pet"><a target="_self" href="./images/pet3.jpg"><img src="./images/pet3.jpg"></a> </div>
+<div class="pet"><a target="_self" href="./images/pet7.jpg"><img src="./images/pet7.jpg"></a></div>
 
 
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
@@ -226,9 +100,9 @@ PetShop Пловдив Скобелева Майка<br>
 Opens at 9:00 AM</p></div><br>
 
 
-<div class="pet"><a target="_self" href="plovdiv.jpg"><img src="plovdiv.jpg"></a> </div>
-<div class="pet"><a target="_self" href="pet9.jpg"><img src="pet9.jpg"></a> </div>
-<div class="pet"><a target="_self" href="pet5.jpg"><img src="pet5.jpg"></a></div> 
+<div class="pet"><a target="_self" href="./images/plovdiv.jpg"><img src="./images/plovdiv.jpg"></a> </div>
+<div class="pet"><a target="_self" href="./images/pet9.jpg"><img src="./images/pet9.jpg"></a> </div>
+<div class="pet"><a target="_self" href="./images/pet5.jpg"><img src="./images/pet5.jpg"></a></div> 
 
 
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
@@ -252,9 +126,9 @@ PetShop office Sofia Roman wall <br>
 1000, ul. "Arhitekt Yordan Milanov" 4 · 087 992 2711 <br>
 Opens at 9:00 AM </p></div> <br>
 
-<div class="pet"><a target="_self" href="sofiq.jpg"><img src="sofiq.jpg"></a> </div>
-<div class="pet"><a target="_self" href="pet4.jpg"><img src="pet4.jpg"></a> </div>
-<div class="pet"><a target="_self" href="pet10.jpg"><img src="pet10.jpg"></a></div> 
+<div class="pet"><a target="_self" href="./images/sofiq.jpg"><img src="./images/sofiq.jpg"></a> </div>
+<div class="pet"><a target="_self" href="./images/pet4.jpg"><img src="./images/pet4.jpg"></a> </div>
+<div class="pet"><a target="_self" href="./images/pet10.jpg"><img src="./images/pet10.jpg"></a></div> 
 
 
 </body>
