--- a/about.html
+++ b/about.html
@@ -1,173 +1,8 @@
 <html>
 <head>
-<link rel="icon" type="image/png" href="icon.png"/>
-<style>
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: #661a00;
-}
+<link rel="icon" type="image/png" href="./images/icon.png"/>
+<link rel="stylesheet" type="text/css" href="./styles/about.css">
 
-li {
-    float: left;
-}
-
-li a, .dropbtn {
-    display: inline-block;
-    color: white;
-    text-align: center;
-    padding: 20px 20px;
-    text-decoration: none;
-	font-size:30;
-	
-}
-
-li a:hover, .dropdown:hover .dropbtn {
-    background-color: #802000;
-}
-
-li.dropdown {
-    display: inline-block;
-}
-
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 20px 20px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-}
-
-.dropdown-content a {
-    color: black;
-    padding: 20px 20px;
-    text-decoration: none;
-    display: block;
-    text-align: left;
-}
-
-.dropdown-content a:hover {background-color: #f1f1f1}
-
-.dropdown:hover .dropdown-content {
-    display: block;
-}
-
-.active {
-    background-color: #ff5c33;
-}
-
-
-
-div.logo {
- margin: 5px;
- width: 100%;
- position:fixed;
- bottom:50px;
- left:1600px;
- z-index: 2;
-	}
-	p.z {
-text-align: center;
-font-size: 50;
-color:brown;
-background-color:#ffb366;
-font-weight:bold;
-}
-
-body {
-   background-image: url("tapet.jpg");
-   background-color: #cccccc;
-   width:100%;
-}
-div.dropdow {
-position:relative;
-display:inline-block;
-weight:900px;
-height:100px;
-font-size:40;
-text-align:left;
-margin-left:200px;
-margin-top:100px;
-font-weight:bold;
-font-family:Arial;
-color:brown;
-text-decoration:underline;
-}
-
-
-div.dropdow-content {
-position:absolute;
-display:none;
-background-image: url(tapetp.jpg);
-min-width:160px;
-box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-padding: 12px 16px;
-border: 1px solid;
-z-index: 1;
-}
-
-div.dropdow:hover .dropdow-content {
-display:block;
-}
-
-p.pic img{
-weight:300px;
-height:300px;
-border: 1px solid;
-}
-p.pic {
-background-color:#ffa366;
-padding:10px;
-}
-h1 {
-font-size:60;
-font-family: Arial
-overflow:hidden;
-text-align:center;
-position:static;
-color:brown;
-font-weight:bold;
-}
-
-div.back {
-background-color:white;
-width:1500px;
-height:1000px;
-margin-left: 200px;
-border: 1px solid;
-}
-
-ol {
-margin-left:90px;
-text-align:left;
-background-color:#ffa366;
-}
-
-ol.bra {
-    list-style-image: url("breed1.jpg");
-}
-ol.brb {
-    list-style-image: url("breed2.jpg");
-}
-ol.brc {
-    list-style-image: url("breed3.jpg");
-}
-ol.brd {
-    list-style-image: url("breed4.jpg");
-} 
-ol.bre {
-    list-style-image: url("breed5.jpg");
-}
-ol.brj {
-    list-style-image: url("breed6.jpg");
-}
-ol.bri {
-    list-style-image: url("breed7.jpg");
-}
-</style>
 </head>
 <body>
 <ul>
@@ -184,7 +19,7 @@ ol.bri {
   <li><a href="gallery.html">Gallery</a></li>
   <li style="float:right"><a href="about.html" class="active">About</a></li>
 </ul>
-<div class="logo" > <img src="logo.png"> </div>
+<div class="logo" > <img src="./images/logo.png"> </div>
 <h1> Customer Support <br> </h1>
 <p class="z">We're always happy to help <br> Do you have a question - take a look at these FAQs </p>
 
@@ -194,7 +29,7 @@ ol.bri {
   <div class="dropdow-content">
     <p class="pic">"Happy Paws" is one of the best choices when 
 	it comes to choosing a new dog.Our dogs are healthy and strong - the perfect company for your kid!
-	<br> <img src="about1.jpg">
+	<br> <img src="./images/about1.jpg">
 </p>
   </div>
 </div>
@@ -204,7 +39,7 @@ ol.bri {
   <div class="dropdow-content">
     <p class="pic">Our dog supplies are not only approved by the World Dog Assotiation(WDA) but are recommended by 99% of the
 	veterinarians too.Your dog's health is something of importance and by buying our products we insure your little buddy a healthy life! <br>
-	<br> <img src="about2.jpg">
+	<br> <img src="./images/about2.jpg">
 </p>
   </div>
   
@@ -212,7 +47,7 @@ ol.bri {
 </div><div class="dropdow">
   <span>3. Are your dogs vaccinated and protected from diseases?</span>
   <div class="dropdow-content">
-    <p class="pic">Yes,we have had our dogs vaccinated and are taking great care to the dogs in all of our breeders.<br><img src="about3.jpg"> </p>
+    <p class="pic">Yes,we have had our dogs vaccinated and are taking great care to the dogs in all of our breeders.<br><img src="./images/about3.jpg"> </p>
   </div>
 </div>
 <br>
