--- a/shop.html
+++ b/shop.html
@@ -1,83 +1,8 @@
 <html>
 <head>
-<link rel="icon" type="image/png" href="icon.png"/>
-<style>
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: #333;
-}
+<link rel="icon" type="image/png" href="./images/icon.png"/>
+<link rel="stylesheet" type="text/css" href="./styles/shop.css">
 
-li {
-    float: left;
-}
-
-li a, .dropbtn {
-    display: inline-block;
-    color: white;
-    text-align: center;
-    padding: 20px 20px;
-    text-decoration: none;
-	font-size:30;
-	
-}
-
-li a:hover, .dropdown:hover .dropbtn {
-    background-color: #111;
-}
-
-li.dropdown {
-    display: inline-block;
-}
-
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 20px 20px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-}
-
-.dropdown-content a {
-    color: black;
-    padding: 20px 20px;
-    text-decoration: none;
-    display: block;
-    text-align: left;
-}
-
-.dropdown-content a:hover {background-color: #f1f1f1}
-
-.dropdown:hover .dropdown-content {
-    display: block;
-}
-
-body {
-   background-image: url("tapet.jpg");
-   background-color: #cccccc;
-   width:100%;
-}
-
-
-
-div.logo {
- margin: 5px;
- width: 100%;
- position:fixed;
- bottom:50px;
- left:1600px;
-  z-index: 2;
-	}
-	p.z {
-text-align: center;
-font-size: 50;
-}
-
-
-</style>
 </head>
 <body>
 <ul>
@@ -95,7 +20,7 @@ font-size: 50;
   <li style="float:right"><a href="about.html">About</a></li>
 </ul>
 
-<div class="logo" > <img src="logo.png"> </div>
+<div class="logo" > <img src="./images/logo.png"> </div>
 <p class="z"> Shop </p>
 
 
